@@ -5,6 +5,14 @@
         Try to fix Windows build.
 
         * API/APICast.h:
+
+2008-11-17  Geoffrey Garen  <ggaren@apple.com>
+
+        Not reviewed.
+        
+        Try to fix Windows build.
+
+        * API/APICast.h:
         * runtime/ExecState.h:
 
 2008-11-17  Geoffrey Garen  <ggaren@apple.com>
